2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Repair epc_publisher_handle_list_path.

	* libepc/publisher.c: Always initialize file list.

2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Don't mess around with GDK's broken threading support: This ugly
	and fat non-recursive big lock hurts more than it helps.

	* libepc/shell.c, libepc/shell.h, libepc/consumer.c,
	tests/framework.c: Remove epc_shell_leave and epc_shell_enter.
	* examples/consumer-ui.c, examples/server-credentials.c:
	Don't call gdk_threads_init.

2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Do not pass NULL data to epc_contents_new, when passing empty strings
	to epc_contents_new_dup.

	* libepc/contents.c: Handle empty strings in epc_contents_new_dup.

2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Show message on root page when no resources have been published yet.

	* libepc/publisher.c: Enhance epc_publisher_handle_root.

2007-11-29  Mathias Hasselmann  <mathias@openismus.com>

	Really shutdown the server in epc_publisher_quit,
	to allow for instance change of the network protocol.

	* libepc/publisher.c: Shutdown the server in epc_publisher_quit.

2007-11-29  Mathias Hasselmann  <mathias@openismus.com>

	Set G_DEBUG=fatal-warnings and EPC_DEBUG=1 on testing.

	* libepc/dispatcher.c:
	Just print a message, instead of a warning on service collisions.
	* tests/test-runner.sh: Set G_DEBUG and EPC_DEBUG, if not set yet.

2007-11-29  Mathias Hasselmann  <mathias@openismus.com>

	Sanitize the progress-hook model by using just user_data.

	* libepc/shell.c: Move epc_shell_default_progress_hooks into
	epc_shell_set_progress_hooks functions. Update signatures of
	epc_shell_progress_begin, epc_shell_progress_update and
	epc_shell_progress_end. Change default progress hooks to deal
	with the new data model. Add epc_shell_progress_end_default.
	Call epc_shell_progress_update with a progress of -1 from